# Morra-Lotto-Capstone

./: .gitignore  Anchor.toml  package-lock.json  package.json
programs/morra-lotto/: Cargo.toml
programs/morra-lotto/src/: lib.rs
tests/: morra-lotto.ts
