[package]
name = "morra-lotto"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "morra_lotto"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "=0.28.0"
anchor-spl = "=0.28.0"
getrandom = { version = "0.2.9", features = ["custom"] }
solana-program = "1.7.0"
winnow="=0.4.1"
toml_datetime="=0.6.1"
blake3 = "0.2.0"


